fixing gap between email and button

--- a/ShoppingCart/styles/styles.css
+++ b/ShoppingCart/styles/styles.css
@@ -206,7 +206,7 @@ hr {
   line-height: 2;
   text-align: center;
   white-space: nowrap;
-  vertical-align: middle;
+  vertical-align: bottom;
   background-image: none;
   border: 1px solid transparent;
   background-color: #ff8c00;
